<resources>
    <string name="app_name">MyWidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play_stop">Play/Stop</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>

    <string name="open_webpage">Open webpage</string>
    <string name="image_explorer">Image explorer</string>
    <string name="audio_player">Audio player</string>
</resources>
